[package]
name = "drv-models"
version.workspace = true
edition.workspace = true

[dependencies]
bytemuck = { version = "^1.23.0", features = ["derive"] }
drv-macros.workspace = true
serde = { version = "^1.0.145", features = ["derive"] }
serde_json.workspace = true
solana-program-error = "3.0.0"
solana-pubkey = { version = "3.0.0", features = ["bytemuck"] }

[lints]
workspace = true
